- top menu header fixing - missing colours

--- a/homepage.css
+++ b/homepage.css
@@ -48,6 +48,10 @@ body {
     text-decoration: none;
     font-size: 17px;
 }
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
+}
 .topnav a.active {
     background-color: #04AA6D;
     color: white;
